@@ -2,9 +2,6 @@ package com.github.scribejava.apis;
 
 import com.github.scribejava.apis.service.DoktornaraboteOAuthServiceImpl;
 import com.github.scribejava.core.builder.api.DefaultApi20;
-import com.github.scribejava.core.extractors.OAuth2AccessTokenJsonExtractor;
-import com.github.scribejava.core.extractors.TokenExtractor;
-import com.github.scribejava.core.model.OAuth2AccessToken;
 import com.github.scribejava.core.model.OAuthConfig;
 import com.github.scribejava.core.model.OAuthConstants;
 import com.github.scribejava.core.model.Verb;
@@ -58,11 +55,6 @@ public class DoktornaraboteApi extends DefaultApi20 {
             sb.append('&').append(OAuthConstants.STATE).append('=').append(OAuthEncoder.encode(state));
         }
         return sb.toString();
-    }
-
-    @Override
-    public TokenExtractor<OAuth2AccessToken> getAccessTokenExtractor() {
-        return OAuth2AccessTokenJsonExtractor.instance();
     }
 
     @Override
