@@ -1,6 +1,9 @@
 package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.DefaultApi20;
+import com.github.scribejava.core.extractors.OAuth2AccessTokenExtractor;
+import com.github.scribejava.core.extractors.TokenExtractor;
+import com.github.scribejava.core.model.OAuth2AccessToken;
 import com.github.scribejava.core.model.OAuthConfig;
 import com.github.scribejava.core.model.OAuthConstants;
 import com.github.scribejava.core.utils.OAuthEncoder;
@@ -40,5 +43,10 @@ public class GitHubApi extends DefaultApi20 {
             sb.append('&').append(OAuthConstants.STATE).append('=').append(OAuthEncoder.encode(state));
         }
         return sb.toString();
+    }
+
+    @Override
+    public TokenExtractor<OAuth2AccessToken> getAccessTokenExtractor() {
+        return OAuth2AccessTokenExtractor.instance();
     }
 }
