@@ -2,9 +2,6 @@ package com.github.scribejava.apis;
 
 import com.github.scribejava.apis.service.ImgurOAuthServiceImpl;
 import com.github.scribejava.core.builder.api.DefaultApi20;
-import com.github.scribejava.core.extractors.OAuth2AccessTokenJsonExtractor;
-import com.github.scribejava.core.extractors.TokenExtractor;
-import com.github.scribejava.core.model.OAuth2AccessToken;
 import com.github.scribejava.core.model.OAuthConfig;
 import com.github.scribejava.core.model.Verb;
 import com.github.scribejava.core.oauth.OAuth20Service;
@@ -28,11 +25,6 @@ public class ImgurApi extends DefaultApi20 {
     @Override
     public Verb getAccessTokenVerb() {
         return Verb.POST;
-    }
-
-    @Override
-    public TokenExtractor<OAuth2AccessToken> getAccessTokenExtractor() {
-        return OAuth2AccessTokenJsonExtractor.instance();
     }
 
     @Override
