@@ -1,6 +1,6 @@
 package com.github.scribejava.core.builder.api;
 
-import com.github.scribejava.core.extractors.OAuth2AccessTokenExtractor;
+import com.github.scribejava.core.extractors.OAuth2AccessTokenJsonExtractor;
 import com.github.scribejava.core.extractors.TokenExtractor;
 import com.github.scribejava.core.model.OAuth2AccessToken;
 import com.github.scribejava.core.model.OAuthConfig;
@@ -10,15 +10,15 @@ import com.github.scribejava.core.utils.OAuthEncoder;
 import java.util.Map;
 
 /**
- * Default implementation of the OAuth protocol, version 2.0 (draft 11)
+ * Default implementation of the OAuth protocol, version 2.0
  *
  * This class is meant to be extended by concrete implementations of the API, providing the endpoints and
  * endpoint-http-verbs.
  *
- * If your Api adheres to the 2.0 (draft 11) protocol correctly, you just need to extend this class and define the
- * getters for your endpoints.
+ * If your API adheres to the 2.0 protocol correctly, you just need to extend this class and define the getters for your
+ * endpoints.
  *
- * If your Api does something a bit different, you can override the different extractors or services, in order to
+ * If your API does something a bit different, you can override the different extractors or services, in order to
  * fine-tune the process. Please read the javadocs of the interfaces to get an idea of what to do.
  *
  */
@@ -30,7 +30,7 @@ public abstract class DefaultApi20 {
      * @return access token extractor
      */
     public TokenExtractor<OAuth2AccessToken> getAccessTokenExtractor() {
-        return OAuth2AccessTokenExtractor.instance();
+        return OAuth2AccessTokenJsonExtractor.instance();
     }
 
     /**
