@@ -1,6 +1,7 @@
 [SNAPSHOT]
  * APIs 2.0 can define different endpoints for access token and for refresh token (the same urls by default)
  * mark Facebook doesn't support refresh token by throwing UnsupportedOperationException
+ * make JSON Access Token Extractor be the default for OAuth 2.0 (according to RFC 6749)
 
 [2.3.0]
  * Stack Exchange authentication via OAuth 2.0 (stackoverflow.com, askubuntu.com, etc.).
